# AI-Chatbot-Zus

./: README.md
ai-chatbot-backend-mindhive/: .dockerignore  .gitignore  Dockerfile  calculator.py  chat.py  dataProcess.py  main.py  orchestrator.py  outlets.py  outlets.sql  planner.py  products.py  pyproject.toml  requirements.txt  scrapeData.py  sql_convert.py
ai-chatbot-frontend-mindhive/: package-lock.json  package.json
ai-chatbot-frontend-mindhive/public/: index.html
ai-chatbot-frontend-mindhive/src/: App.js  ChatUi.js
