[project]
name = "ai-chatbot-zus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.121.2",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.3",
    "langchain-pinecone>=0.2.13",
    "pinecone>=7.3.0",
    "requests>=2.32.5",
    "sqlparse>=0.5.3",
    "supabase>=2.24.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]
